Закончил верстку десктопной версии

--- a/pages/index.css
+++ b/pages/index.css
@@ -24,10 +24,22 @@
 @import url(../blocks/intro/__list/_number/intro__list_number.css);
 @import url(../blocks/photo-grid/photo-grid.css);
 @import url(../blocks/photo-grid/__item/photo-grid__item.css);
-
-
+@import url(../blocks/places/places.css);
+@import url(../blocks/place/place.css);
+@import url(../blocks/place/__title/place__title.css);
+@import url(../blocks/place/__image/place__image.css);
+@import url(../blocks/place/__website/place__website.css);
+@import url(../blocks/place/__website/_text/place__website_text.css);
+@import url(../blocks/place/__website/_link/place__website_link.css);
+@import url(../blocks/place/__text/place__text.css);
+@import url(../blocks/place/__paragraph/place__paragraph.css);
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__background/cover__background.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
+@import url(../blocks/cover/__meta/cover__meta.css);
 /* FOOTER */
 @import url(../blocks/footer/footer.css);
-
-@import url();
-@import url();
+@import url(../blocks/footer/__llinks/footer__links.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
