--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -2,7 +2,6 @@
   margin: 0;
 
   max-width: 720px;
-  max-height: 200px;
 
   font-weight: 900;
   font-size: 96px;
@@ -10,4 +9,24 @@
 
   color: #fff;
   text-align: center;
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .lead__title {
+    max-width: 288px;
+
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .lead__title {
+    max-width: 288px;
+
+    font-weight: 900;
+    font-size: 40px;
+    line-height: 44px;
+  }
 }
