--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -9,3 +9,23 @@
   color: #fff;
   text-align: center;
 }
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .cover__title {
+    max-width: 400px;
+
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .cover__title {
+    max-width: 288px;
+
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
