--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,8 +1,42 @@
 .footer {
+  max-width: 1184px;
   margin: 0 auto;
   padding-top: 92px;
 
-  max-width: 1184px;
   display: flex;
   justify-content: space-between;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .footer {
+    max-width: 928px;
+    overflow-x: hidden;
+  }  
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .footer {
+    max-width: 720px;
+    overflow-x: hidden;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .footer {
+    padding-top: 64px;   
+    max-width: 400px;
+
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .footer {
+    padding-top: 64px;  
+    max-width: 288px;
+
+    display: flex;
+    flex-direction: column;
+  }
 }
