--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -4,5 +4,20 @@
   line-height: 28px;
 
   color: #fff;
+}
 
+@media (min-width: 425px) and (max-width: 767px) {
+  .header__lang-link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .header__lang-link {
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
