--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -6,3 +6,27 @@
   display: flex;
   justify-content: space-between;
 }
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .header {
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .header {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .header {
+    max-width: 420px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .header {
+    max-width: 288px;
+  }
+}
