--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -11,3 +11,21 @@
 
   list-style: none;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .intro__list {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .intro__list {
+    min-width: 400px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .intro__list {
+    max-width: 288px;
+  }
+}
