--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -8,3 +8,29 @@
 
   color: #fff;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .intro__title {
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .intro__title {
+    max-width: 400px;
+
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .intro__title {
+    max-width: 288px;
+
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+  }
+}
