--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -3,9 +3,37 @@
   margin: 0 auto;
 
   max-width: 984px;
-  max-height: 429px;
 
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .intro {
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .intro {
+    padding-top: 88px;
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .intro {
+    padding-top: 64px;
+    max-width: 420px;
+
+    align-items: center;  
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .intro {
+    padding-top: 64px;
+    max-width: 288px;
+  }
 }
