--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -3,7 +3,6 @@
   padding-top: 32px;
 
   max-width: 640px;
-  max-height: 72px;
 
   font-weight: 400;
   font-size: 30px;
@@ -11,4 +10,26 @@
 
   color: #fff;
   text-align: center;
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .lead__subtitle {
+    padding-top: 16px;
+    max-width: 288px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .lead__subtitle {
+    padding-top: 16px;
+    max-width: 288px;
+
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+  }
 }
