--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -3,9 +3,40 @@
   padding-top: 56px;
 
   max-width: 984px;
-  max-height: 1005px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .lead {
+    padding-top: 48px;
+
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .lead {
+    padding-top: 48px;
+
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .lead {
+    padding-top: 48px;
+
+    max-width: 425px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .lead {
+    padding-top: 48px;
+
+    max-width: 320px;
+  }
 }
