--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -8,3 +8,41 @@
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
   gap: 16px;
 }
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .photo-grid {
+    max-width: 928px;
+    
+    grid-template-columns: 3, minmax(300px, 1fr);    
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .photo-grid {
+    max-width: 720px;
+
+    padding: 88px 16px 0px 16px;
+    
+    grid-template-columns: 2, minmax(352px, 1fr);    
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .photo-grid {
+    max-width: 420px;
+
+    padding: 64px 16px 0px 16px;
+    
+    grid-template-columns: 1, minmax(288px, 1fr);    
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .photo-grid {
+    max-width: 288px;
+
+    padding: 64px 16px 0px 16px;
+    
+    grid-template-columns: 1, minmax(288px, 1fr);    
+  }
+}
