--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -8,3 +8,35 @@
   grid-row: 2;
   grid-column: 1;
 }
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .place__image {
+    padding-top: 48px;
+    padding-right: 32px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__image {
+    padding-top: 48px;
+    padding-right: 28px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .place__image {
+    padding: 0;
+
+    grid-row: 3;
+    grid-column: 1;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .place__image {
+    padding: 0;
+
+    grid-row: 3;
+    grid-column: 1;
+  }
+}
