--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -11,3 +11,27 @@
 .place__paragraph:nth-child(even) {
   padding-top: 26px;
 }
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__paragraph {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .place__paragraph {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .place__paragraph {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 163%;
+  }
+}
