--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -3,6 +3,7 @@
   padding-right: 40px;
 
   max-width: 460px;
+
   font-weight: 900;
   font-size: 72px;
   line-height: 76px;
@@ -11,4 +12,54 @@
 
   grid-row: 1;
   grid-column: 1;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .place__title {
+    padding-right: 32x;
+
+    max-width: 440px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__title {
+    padding-right: 28px;
+
+    max-width: 340px;
+
+    font-weight: 900;
+    font-size: 42px;
+    line-height: 46px;    
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .place__title {
+    padding: 0 16px;
+
+    max-width: 400px;
+
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+
+    grid-row: 1;
+    grid-column: 1;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .place__title {
+    padding: 0 16px;
+
+    max-width: 288px;
+
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
+
+    grid-row: 1;
+    grid-column: 1;
+  }
 }
