--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -8,3 +8,37 @@
   flex-direction: column;
   justify-content: end;
 }
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .place__website {
+    max-width: 456px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place__website {
+    max-width: 352px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .place__website {
+    padding: 32px 16px;
+
+    max-width: 400px;
+
+    grid-row: 2;
+    grid-column: 1;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .place__website {
+    padding: 32px 16px;
+
+    max-width: 288px;
+
+    grid-row: 2;
+    grid-column: 1;
+  }
+}
