--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,9 +3,50 @@
 
   display: grid;
   grid-template-columns: 1fr 1fr;
-
 }
 
 .place:nth-child(n+2) {
   padding-top: 80px;
+}
+
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .place {
+    max-width: 928px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+  .place {
+    max-width: 720px;
+  }
+
+  .place:nth-child(n+2) {
+    padding-top: 73px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .place {
+    max-width: 425px;
+
+    display: grid;
+    grid-template-columns: 1fr;    
+  }
+
+  .place:nth-child(n+2) {
+    padding-top: 50px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .place {
+    max-width: 320px;
+
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+  
+  .place:nth-child(n+2) {
+    padding-top: 50px;
+  }
 }
