--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,5 +5,35 @@
   max-width: 984px;
 }
 
+@media (min-width: 1024px) and (max-width: 1279px) {
+  .places {
+    padding: 92px 0px;
+  
+    max-width: 928px;
+  }
+}
 
+@media (min-width: 768px) and (max-width: 1023px) {
+  .places {
+    padding: 88px 0px;
+  
+    max-width: 720px;
+  }
+}
+
+@media (min-width: 425px) and (max-width: 767px) {
+  .places {
+    padding: 64px 0px;
+  
+    max-width: 425px;
+  }
+}
+
+@media (min-width: 320px) and (max-width: 424px) {
+  .places {
+    padding: 64px 0px;
+  
+    max-width: 320px;
+  }
+}
 
