Подправил ошибки ревьювера

--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -23,14 +23,15 @@
 
 @media (min-width: 1024px) and (max-width: 1279px) {
   .cover {
-    min-width: 1024px;
+    margin: 0;
+    width: 100%;
     min-height: 640px;
   }  
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .cover {
-    min-width: 768px;
+    width: 100%;
     min-height: 480px;
   }  
 }
