--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -19,14 +19,14 @@
 
 @media (min-width: 1024px) and (max-width: 1279px) {
   .cover__link {
-    min-width: 1024px;
+    width: 100%;
     min-height: 640px;
   }  
 }
 
 @media (min-width: 768px) and (max-width: 1023px) {
   .cover__link {
-    min-width: 768px;
+    width: 100%;
     min-height: 480px;
   }  
 }
