--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -8,13 +8,7 @@
   color: #fff;
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
-  .footer__copyright {
-    padding-top: 48px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 767px) {
   .footer__copyright {
     padding-top: 48px;
   }
