--- a/blocks/footer/__llinks/footer__links.css
+++ b/blocks/footer/__llinks/footer__links.css
@@ -7,16 +7,7 @@
   align-items: center;
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
-  .footer__links {
-    display: flex;
-    flex-direction: column;
-
-    align-items: start;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 767px) {
   .footer__links {
     display: flex;
     flex-direction: column;
