--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -4,25 +4,13 @@
   width: 100%;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (min-width: 768px) and (max-width: 1279px) {
   .lead__image {
     padding-top: 56px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
-  .lead__image {
-    padding-top: 56px;
-  }
-}
-
-@media (min-width: 425px) and (max-width: 767px) {
-  .lead__image {
-    padding-top: 40px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 767px) {
   .lead__image {
     padding-top: 40px;
   }
