--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,23 +12,11 @@
   text-align: center;
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .lead__subtitle {
     padding-top: 16px;
     max-width: 288px;
 
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 20px;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 424px) {
-  .lead__subtitle {
-    padding-top: 16px;
-    max-width: 288px;
-
-    font-weight: 400;
     font-size: 16px;
     line-height: 20px;
   }
