--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -5,16 +5,7 @@
   grid-column: 2;
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
-  .place__text {
-    padding: 32px 16px 0px 16px;
-  
-    grid-row: 4;
-    grid-column: 1;
-  }
-}
-
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 767px) {
   .place__text {
     padding: 32px 16px 0px 16px;
   
