Подправил ошибки после ревью

--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -5,6 +5,7 @@
   position: relative;
 
   text-decoration: none;
+  transition: 1s;
 
   display: flex;
   flex-direction: column;
@@ -14,31 +15,29 @@
 .cover__link:hover {
   background-color: #2A2C2F;
   opacity: 0.8;
-  transition: 1s;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .cover__link {
     width: 100%;
     min-height: 640px;
   }  
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .cover__link {
-    width: 100%;
     min-height: 480px;
   }  
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .cover__link {
     min-width: 425px;
     min-height: 266px;
   }  
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .cover__link {
     min-width: 320px;
     min-height: 200px;
