--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -10,7 +10,7 @@
   text-align: center;
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .cover__title {
     max-width: 400px;
 
@@ -19,11 +19,8 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .cover__title {
     max-width: 288px;
-
-    font-size: 32px;
-    line-height: 35px;
   }
 }
