--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -21,29 +21,28 @@
   opacity: 0.3;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .cover {
     margin: 0;
-    width: 100%;
     min-height: 640px;
   }  
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .cover {
     width: 100%;
     min-height: 480px;
   }  
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .cover {
     min-width: 425px;
     min-height: 266px;
   }  
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .cover {
     min-width: 320px;
     min-height: 200px;
