--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,15 +1,12 @@
 .footer__link {
   text-decoration: none;
+  margin-right: 18px;
 
   font-weight: 400;
   font-size: 16px;
   line-height: 18px;
 
   color: #fff;
-}
-
-.footer__link:nth-child(n+1) {
-  padding-right: 18px;
 }
 
 .footer__link:hover {
@@ -20,10 +17,5 @@
   .footer__link {
     font-size: 24px;
     line-height: 24px;
-  }
-
-  .footer__link:nth-child(n+1) {
-    display: block;
-    padding-top: 32px;
   }
 }
