--- a/blocks/footer/__links/footer__links.css
+++ b/blocks/footer/__links/footer__links.css
@@ -5,13 +5,14 @@
 
   display: flex;
   align-items: center;
+
 }
 
 @media (max-width: 767px) {
   .footer__links {
-    display: flex;
     flex-direction: column;
 
     align-items: start;
+    gap: 32px;
   }
 }
