--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,12 +3,17 @@
   font-size: 24px;
   line-height: 28px;
 
+  text-decoration: none;
+
   color: #fff;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 767px) {
   .header__lang-link {
-    font-weight: 400;
     font-size: 18px;
     line-height: 20px;
   }
