--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -7,25 +7,25 @@
   justify-content: space-between;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .header {
     max-width: 928px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .header {
     max-width: 720px;
   }
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .header {
     max-width: 420px;
   }
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .header {
     max-width: 288px;
   }
