--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -9,20 +9,20 @@
 
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .intro {
     max-width: 928px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .intro {
     padding-top: 88px;
     max-width: 720px;
   }
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .intro {
     padding-top: 64px;
     max-width: 420px;
@@ -31,9 +31,8 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .intro {
-    padding-top: 64px;
     max-width: 288px;
   }
 }
