--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -2,6 +2,20 @@
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
+  letter-spacing: 1.5px;
 
   color: #fff;
+  text-transform: uppercase;
+}
+
+@media (max-width: 1023px) {
+  .lead__caption {
+    padding-left: 24px;
+  }
+}
+
+@media (max-width: 767px) {
+  .lead__caption {
+    padding-left: 16px;
+  }
 }
