--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,5 +2,10 @@
   margin: 28px auto 24px;
 
   max-width: 1280px;
-  max-height: 100%;
+}
+
+@media (max-width: 767px) {
+  .page {
+    margin: 16px auto 24px;
+  }
 }
