--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -9,7 +9,7 @@
   gap: 16px;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .photo-grid {
     max-width: 928px;
     
@@ -17,7 +17,7 @@
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .photo-grid {
     max-width: 720px;
 
@@ -27,7 +27,7 @@
   }
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .photo-grid {
     max-width: 420px;
 
@@ -37,12 +37,8 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .photo-grid {
-    max-width: 288px;
-
-    padding: 64px 16px 0px 16px;
-    
-    grid-template-columns: minmax(288px, 1fr);    
+    max-width: 288px;  
   }
 }
