--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -9,13 +9,13 @@
   grid-column: 1;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .place__image {
     padding-right: 32px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .place__image {
     padding-right: 28px;
   }
