--- a/blocks/place/__website-text/place__website-text.css
+++ b/blocks/place/__website-text/place__website-text.css
@@ -4,6 +4,8 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
 
   color: #AAA;
 }
