--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -9,13 +9,13 @@
   justify-content: end;
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .place__website {
     max-width: 352px;
   }
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .place__website {
     padding: 32px 16px;
 
@@ -26,13 +26,8 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .place__website {
-    padding: 32px 16px;
-
     max-width: 288px;
-
-    grid-row: 2;
-    grid-column: 1;
   }
 }
