--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -9,13 +9,13 @@
   padding-top: 80px;
 }
 
-@media (min-width: 1024px) and (max-width: 1279px) {
+@media (max-width: 1279px) {
   .place {
     max-width: 928px;
   }
 }
 
-@media (min-width: 768px) and (max-width: 1023px) {
+@media (max-width: 1023px) {
   .place {
     max-width: 720px;
   }
@@ -25,7 +25,7 @@
   }
 }
 
-@media (min-width: 425px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .place {
     max-width: 425px;
 
@@ -38,15 +38,8 @@
   }
 }
 
-@media (min-width: 320px) and (max-width: 424px) {
+@media (max-width: 424px) {
   .place {
     max-width: 320px;
-
-    display: grid;
-    grid-template-columns: 1fr;
-  }
-  
-  .place:nth-child(n+2) {
-    padding-top: 50px;
   }
 }
