--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,6 @@
 .lead__caption {
+  padding-top: 10px;
+
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
@@ -11,6 +13,7 @@
 @media (max-width: 1023px) {
   .lead__caption {
     padding-left: 24px;
+    padding-top: 8px;
   }
 }
 
